-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.2
-
None
-
-
19a5273e05 (qt/qtbase/dev) 19a5273e05 (qt/tqtc-qtbase/dev) d26b2e5ffe (qt/qtbase/6.3) dbadfdccec (qt/tqtc-qtbase/6.2)
Dear all,
I found the documentation for QtAndroidPrivate wrong. The documentation (-> https://doc.qt.io/qt-6/qtandroidprivate.html) gives the following information:
{{
Header: #include <QtAndroid>
CMake: find_package(Qt6 COMPONENTS Core REQUIRED)
target_link_libraries(mytarget PRIVATE Qt6::Core)
}}
However, it seems to me that the header "QtAndroid" simply doesn't exist, and that "QtCore/private/qandroidextras_p.h" must be included instead. Also it seems that Qt6::Core is not enough. Instead, the cmake command
target_link_libraries(mytarget PRIVATE Qt6::CorePrivate)
must be used.
Best,
Stefan Kebekus.
- is duplicated by
-
QTBUG-102593 QtAndroid header is missing
-
- Closed
-
- relates to
-
QTBUG-103865 Wrong import in private Android related classes (e.g., QAndroidActivityResultReceiver)
-
- Closed
-
- resulted in
-
QTBUG-109214 Documentation for QtAndroidPrivate is still wrong for CMake
-
- Closed
-
| For Gerrit Dashboard: QTBUG-99335 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 387737,2 | Fix QtAndroidPrivate namespace documentation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 410276,2 | Fix QtAndroidPrivate namespace documentation | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 410279,2 | Fix QtAndroidPrivate namespace documentation | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |