Fix QtAndroidPrivate namespace documentation

Fix the documentation to show the actual header and module

Fixes: QTBUG-99335
Pick-to: 6.3 6.2
Change-Id: I333a5a95a448fdf3e08801bf794c93b87cd1f81f
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>